--- a/TCCMDN/TCCMDN/Site.Master
+++ b/TCCMDN/TCCMDN/Site.Master
@@ -12,6 +12,8 @@
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width" />
     <asp:ContentPlaceHolder runat="server" ID="HeadContent" />
+
+
 </head>
 <body>
     <form runat="server">
@@ -40,7 +42,19 @@
         <div class="content-wrapper">
             <div class="float-left">
                 <p class="site-title">
-                    <a runat="server" href="~/">your logo here</a>
+                    <a runat="server" href="~/">TCC - Tennis Club Chavornay</a>
+                    <br />
+                    <p><%  
+                           string hello;
+                           //hour
+                           System.DateTime moment = System.DateTime.Now;
+                           int hour = moment.Hour;
+                           if (hour < 18) { hello = "Bonjour et bienvenue sur notre site !"; }
+                           else { hello = ", Bonsoir et bienvenue sur notre site !"; }
+                           Response.Write(System.DateTime.Now.Day + "."+System.DateTime.Now.Month + "."+ System.DateTime.Now.Year + " " + System.DateTime.Now.Hour + ":" + System.DateTime.Now.Minute + ", " + hello); 
+                       %>
+
+                    </p>
                 </p>
             </div>
             <div class="float-right">
@@ -48,8 +62,8 @@
                     <asp:LoginView runat="server" ViewStateMode="Disabled">
                         <AnonymousTemplate>
                             <ul>
-                                <li><a id="registerLink" runat="server" href="~/Account/Register">Register</a></li>
-                                <li><a id="loginLink" runat="server" href="~/Account/Login">Log in</a></li>
+                                <li><a id="registerLink" runat="server" href="~/Account/Register.aspx">S'enregistrer</a></li>
+                                <li><a id="loginLink" runat="server" href="~/Account/Login.aspx">Login</a></li>
                             </ul>
                         </AnonymousTemplate>
                         <LoggedInTemplate>
@@ -63,9 +77,15 @@
                 </section>
                 <nav>
                     <ul id="menu">
-                        <li><a runat="server" href="~/">Home</a></li>
-                        <li><a runat="server" href="~/About">About</a></li>
-                        <li><a runat="server" href="~/Contact">Contact</a></li>
+                        <li><a runat="server" href="~/">Accueil</a></li>
+                        <li><a runat="server" href="~/Courts.aspx">Courts</a></li>
+                        <li><a runat="server" href="~/Bookings.aspx">Réservations</a></li>
+                        <li><a runat="server" href="~/Members.aspx">Membres</a></li>
+                        <li><a runat="server" href="~/Profile.aspx">Profil</a></li>
+                        <li><a runat="server" href="~/Stats.aspx">Statistiques</a></li>
+                        <li><a runat="server" href="~/Admin.aspx">Administration</a></li>
+                        <li><a runat="server" href="~/About.aspx">A propos</a></li>
+                        <li><a runat="server" href="~/Contact.aspx">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -80,7 +100,9 @@
     <footer>
         <div class="content-wrapper">
             <div class="float-left">
-                <p>&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
+                <p><% var appSettings = ConfigurationManager.AppSettings;
+                string result = appSettings["master"] ?? "Not Found";
+                Response.Write("v. "+ global_asax.version  +" (" + result + ")"); %></p>
             </div>
         </div>
     </footer>
